Fixed Spelling Mistake.

--- a/_data/teams.yml
+++ b/_data/teams.yml
@@ -76,7 +76,7 @@
 
 - name: Tsunimby
   desc: Social activism platform
-  mission: Introduce individuals to other advocats who share the same morals and ideals, while providing social activism opportunities
+  mission: Introduce individuals to other advocates who share the same morals and ideals, while providing social activism opportunities
 
 - name: PolyBoxy
   desc: Cultural, subscription box service
