added link to alumni page and updated with 2017 program roster and one new school

--- a/_data/roster.yml
+++ b/_data/roster.yml
@@ -652,3 +652,183 @@
     year: 2016
     company: Merit Hero
     title: COO
+-
+    fname: Daniel
+    lname: Naryshev
+    year: 2017
+    company: Cart Savy
+    title: CTO
+-
+    fname: Daniel
+    lname: Pinter
+    year: 2017
+    company: Cart Savy
+    title: CEO
+-
+    fname: Esha
+    lname: Ahluwalia
+    year: 2017
+    company: Cart Savy
+    title: CCO
+-
+    fname: Flynn
+    lname: D'Angelo
+    year: 2017
+    company: Cart Savy
+    title: CFO
+-
+    fname: Luis
+    lname: Santiago
+    year: 2017
+    company: Cart Savy
+    title: COO
+-
+    fname: Rachel
+    lname: Rothstein
+    year: 2017
+    company: Cart Savy
+    title: CMO
+-
+    fname: Angela
+    lname: Caamal
+    year: 2017
+    company: Inspoeta
+    title: COO
+-
+    fname: Daniel
+    lname: Mason
+    year: 2017
+    company: Inspoeta
+    title: CFO
+-
+    fname: Emily
+    lname: Volovik
+    year: 2017
+    company: Inspoeta
+    title: CEO
+-
+    fname: Genesis
+    lname: Monterrubio
+    year: 2017
+    company: Inspoeta
+    title: CMO
+-
+    fname: Nathan
+    lname: Banner
+    year: 2017
+    company: Inspoeta
+    title: CTO
+-
+    fname: Yabsra
+    lname: Ayele
+    year: 2017
+    company: Inspoeta
+    title: CIO
+-
+    fname: Cooper
+    lname: Brooks
+    year: 2017
+    company: PolyBoxy
+    title: CEO
+-
+    fname: Finneas Weeks
+    lname: Manjarres
+    year: 2017
+    company: PolyBoxy
+    title: CTO
+-
+    fname: Hannah
+    lname: Shayefar
+    year: 2017
+    company: PolyBoxy
+    title: COO
+-
+    fname: Hunter
+    lname: Herrera
+    year: 2017
+    company: PolyBoxy
+    title: CIO
+-
+    fname: Jessica
+    lname: De La Cruz
+    year: 2017
+    company: PolyBoxy
+    title: CMO
+-
+    fname: Khulan
+    lname: Erdenemunkh
+    year: 2017
+    company: PolyBoxy
+    title: CFO
+-
+    fname: Dalila
+    lname: Martinez
+    year: 2017
+    company: ResidenTours
+    title: CIO
+-
+    fname: Emnet
+    lname: Abera
+    year: 2017
+    company: ResidenTours
+    title: COO
+-
+    fname: Isabella
+    lname: Rivas
+    year: 2017
+    company: ResidenTours
+    title: CMO
+-
+    fname: Jake
+    lname: Linowes
+    year: 2017
+    company: ResidenTours
+    title: CEO
+-
+    fname: Kevin
+    lname: Madrigal
+    year: 2017
+    company: ResidenTours
+    title: CTO
+-
+    fname: Mark
+    lname: Bartelli
+    year: 2017
+    company: ResidenTours
+    title: CFO
+-
+    fname: Alexandra
+    lname: Zubieta
+    year: 2017
+    company: Tsunimby
+    title: CTO
+-
+    fname: Austen
+    lname: Ariniello
+    year: 2017
+    company: Tsunimby
+    title: CEO
+-
+    fname: Blayne
+    lname: Suttonwills II
+    year: 2017
+    company: Tsunimby
+    title: CIO
+-
+    fname: Lauren
+    lname: Shayefar
+    year: 2017
+    company: Tsunimby
+    title: CMO
+-
+    fname: Nicolas
+    lname: Galvis
+    year: 2017
+    company: Tsunimby
+    title: CFO
+-
+    fname: Sabah
+    lname: Damji
+    year: 2017
+    company: Tsunimby
+    title: COO
