--- a/_data/schools.yml
+++ b/_data/schools.yml
@@ -14,6 +14,9 @@
     college: California State University Poly Pomona
     site: http://www.cpp.edu
 -
+    college: Carnegie Mellon University
+    site: https://www.cmu.edu
+-
     college: Cornell University
     site: http://www.cornell.edu
 -
